Finished conversion of name change from nwsgi to owin.

--- a/src/Owin.csproj
+++ b/src/Owin.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Owin</RootNamespace>
-    <AssemblyName>Owin</AssemblyName>
+    <AssemblyName>owin</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
