Updating names per discussion thread
http://groups.google.com/group/net-http-abstractions/browse_thread/thread/fe28846997fd1c7b

--- a/Gate.Tests/Gato.Tests.csproj
+++ b/Gate.Tests/Gato.Tests.csproj
@@ -57,7 +57,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gato\Gato.csproj">
+    <ProjectReference Include="..\Gate\Gato.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gato</Name>
     </ProjectReference>
