--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Gate\packages.config" />
+  <repository path="..\Gate.Tests\packages.config" />
+  <repository path="..\Gate.Helpers.Tests\packages.config" />
 </repositories>
