Moving projects to src folder

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Gate\packages.config" />
-  <repository path="..\Gate.Tests\packages.config" />
-  <repository path="..\Gate.Helpers.Tests\packages.config" />
+  <repository path="..\src\Gate\packages.config" />
+  <repository path="..\src\Gate.Tests\packages.config" />
+  <repository path="..\src\Gate.Helpers.Tests\packages.config" />
 </repositories>
