Restructuring for samples and harnesses
Hosts folder for RI of common hosts
Samples folder for runnable integrations of Host-Application

--- a/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
+++ b/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gate\Gate.csproj">
+    <ProjectReference Include="..\..\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
