Reference implementation of Gate.Nancy bridge
Not working - don't know how to use Nancy views :)

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\src\Gate\packages.config" />
   <repository path="..\src\Gate.Tests\packages.config" />
   <repository path="..\src\Gate.Helpers.Tests\packages.config" />
+  <repository path="..\src\Tests\Gate.Nancy.Tests\packages.config" />
 </repositories>
