--- a/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
+++ b/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GateModule.cs" />
+    <Compile Include="Host.cs" />
+    <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
