--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -6,8 +6,12 @@
   -->
 
 <configuration>
-    <system.web>
-        <compilation debug="true" targetFramework="4.0" />
-    </system.web>
-
+	<system.web>
+		<compilation debug="true" targetFramework="4.0" />
+	</system.web>
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true">
+			<add name="Gate" type="Gate.AspNet.Module, Gate.AspNet" />
+		</modules>
+	</system.webServer>
 </configuration>
