--- a/src/Applications/Gate.Nancy/Gate.Nancy.csproj
+++ b/src/Applications/Gate.Nancy/Gate.Nancy.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationBaseRootPathProvider.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
