--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\src\Gate\packages.config" />
-  <repository path="..\src\Gate.Tests\packages.config" />
-  <repository path="..\src\Gate.Helpers.Tests\packages.config" />
+  <repository path="..\src\Tests\Gate.Tests\packages.config" />
+  <repository path="..\src\Tests\Gate.Helpers.Tests\packages.config" />
   <repository path="..\src\Tests\Gate.Nancy.Tests\packages.config" />
 </repositories>
