--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -46,6 +46,7 @@
     <Compile Include="InputStream.cs" />
     <Compile Include="OutputStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spooling\Spool.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
