--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="InputStreamTests.cs" />
     <Compile Include="OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spooling\SpoolTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
