Adding Configure methods
Keeping the configuration loader out of the AppBuilder
Overloading the constructor for different combinations of string
and delegate calls

--- a/src/Gate.Startup/Gate.Startup.csproj
+++ b/src/Gate.Startup/Gate.Startup.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppBuilder.cs" />
+    <Compile Include="Loader\DefaultConfigurationLoader.cs" />
+    <Compile Include="Loader\IConfigurationLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunExtensions.cs" />
   </ItemGroup>
