Implementing DefaultConfigurationLoader.Load
Slightly opinionated... But really just boils down to invoking
a named method by whatever means is appropriate.

--- a/src/Tests/Gate.Startup.Tests/Gate.Startup.Tests.csproj
+++ b/src/Tests/Gate.Startup.Tests/Gate.Startup.Tests.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppBuilderTests.cs" />
+    <Compile Include="Loader\DefaultConfigurationLoaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
