Using the AppBuilder in the a reference implementation host handler
Uses appSettings key="Gate.Startup" as its configuration pointer
Adding the ability to use a method that returns an app as a configuration method

--- a/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
+++ b/src/Hosts/Gate.AspNet/Gate.AspNet.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -41,11 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Host.cs" />
+    <Compile Include="Handler.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Gate.Startup\Gate.Startup.csproj">
+      <Project>{9AB4A187-06E2-4DA4-8040-32EC4A1FFC0F}</Project>
+      <Name>Gate.Startup</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
