--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0"?>
-
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
 <configuration>
+  
+  <appSettings>
+    <!-- when no middleware is used, pointing the host handler at the framework adapter is sufficient -->
+    <add key="Gate.Startup" value="Gate.Nancy.Application.Create"/>
+  </appSettings>
+  
 	<system.web>
+    <!-- debug true to support 'F5' running -->
 		<compilation debug="true" targetFramework="4.0" />
 	</system.web>
-	<system.webServer>
+
+  <system.webServer>
+    <!-- plug the aspnet host handler's module -->
 		<modules runAllManagedModulesForAllRequests="true">
 			<add name="Gate" type="Gate.AspNet.Module, Gate.AspNet" />
 		</modules>
