--- a/src/Tests/Gate.Startup.Tests/Gate.Startup.Tests.csproj
+++ b/src/Tests/Gate.Startup.Tests/Gate.Startup.Tests.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Gate.Helpers\Gate.Helpers.csproj">
+      <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
+      <Name>Gate.Helpers</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Gate.Startup\Gate.Startup.csproj">
       <Project>{9AB4A187-06E2-4DA4-8040-32EC4A1FFC0F}</Project>
       <Name>Gate.Startup</Name>
