--- a/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
+++ b/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="RequestTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
