--- a/src/Samples/Sample.AspNet/Sample.AspNet.csproj
+++ b/src/Samples/Sample.AspNet/Sample.AspNet.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="MainModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Applications\Gate.Nancy\Gate.Nancy.csproj">
@@ -78,6 +79,10 @@
     <ProjectReference Include="..\..\Gate.Helpers\Gate.Helpers.csproj">
       <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
       <Name>Gate.Helpers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Gate.Startup\Gate.Startup.csproj">
+      <Project>{9AB4A187-06E2-4DA4-8040-32EC4A1FFC0F}</Project>
+      <Name>Gate.Startup</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.AspNet.csproj">
       <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
