--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -4,7 +4,7 @@
   <appSettings>
     <!-- when no middleware is used, pointing the host handler at the framework adapter is sufficient -->
     <!--<add key="Gate.Startup" value="Gate.Nancy.Application.Create"/>-->
-    <add key="Gate.Startup" value="Gate.Helpers.Wilson.App"/>
+    <add key="Gate.Startup" value="Sample.AspNet.Startup"/>
   </appSettings>
   
 	<system.web>
