Roughing in builder-level mapping
Changing builder to a simple stack, _app is not a special case
Moving Use extension methods into another class
Adding Map and Map extension methods
Connecting Map special case via mapper delegate

--- a/src/Gate.Startup/Gate.Startup.csproj
+++ b/src/Gate.Startup/Gate.Startup.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppBuilder.cs" />
+    <Compile Include="UseExtensions.cs" />
+    <Compile Include="MapExtensions.cs" />
     <Compile Include="Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Loader\IConfigurationLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
