--- a/src/Gate.Helpers/Gate.Helpers.csproj
+++ b/src/Gate.Helpers/Gate.Helpers.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="ShowExceptions.cs" />
+    <Compile Include="UrlMapper.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
     <Compile Include="Wilson.cs" />
   </ItemGroup>
