Renaming Environment class to Owin
Makes public string constants seem better scoped
Avoids conflicts with System.Environment namespace

--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncResult.cs" />
-    <Compile Include="Environment.cs" />
+    <Compile Include="Owin.cs" />
     <Compile Include="InputStream.cs" />
     <Compile Include="OutputStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
