--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EnvironmentTests.cs" />
+    <Compile Include="OwinTests.cs" />
     <Compile Include="InputStreamTests.cs" />
     <Compile Include="OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
