--- a/src/Gate.Startup/Gate.Startup.csproj
+++ b/src/Gate.Startup/Gate.Startup.csproj
@@ -48,6 +48,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunExtensions.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Gate.Helpers\Gate.Helpers.csproj">
+      <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
+      <Name>Gate.Helpers</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
