Configuration loader hunts for Startup when not specified

--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   
-  <appSettings>
+  <!--<appSettings>
     <add key="Gate.Startup" value="Sample.AspNet.Startup"/>
-  </appSettings>
+  </appSettings>-->
   
 	<system.web>
-    <!-- debug true to support 'F5' running -->
 		<compilation debug="true" targetFramework="4.0" />
 	</system.web>
 
