--- a/src/Samples/Sample.Wcf/app.config
+++ b/src/Samples/Sample.Wcf/app.config
@@ -1,11 +1,9 @@
 <?xml version="1.0"?>
 
 <configuration>
-  <appSettings>
-    <!-- when no middleware is used, pointing the host handler at the framework adapter is sufficient -->
-    <!--<add key="Gate.Startup" value="Gate.Nancy.Application.Create"/>-->
+  <!--<appSettings>
     <add key="Gate.Startup" value="Sample.Wcf.Startup"/>
-  </appSettings>
+  </appSettings>-->
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
