--- a/src/Samples/Sample.Wcf/Sample.Wcf.csproj
+++ b/src/Samples/Sample.Wcf/Sample.Wcf.csproj
@@ -60,9 +60,9 @@
       <Project>{85392B05-6564-472B-9A7B-58AFB721F2AE}</Project>
       <Name>Gate.Helpers</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Gate.Startup\Gate.Startup.csproj">
-      <Project>{9AB4A187-06E2-4DA4-8040-32EC4A1FFC0F}</Project>
-      <Name>Gate.Startup</Name>
+    <ProjectReference Include="..\..\Gate\Gate.csproj">
+      <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
+      <Name>Gate</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Hosts\Gate.Wcf\Gate.Wcf.csproj">
       <Project>{E7602355-82C2-4698-AB61-128B8A6E53CE}</Project>
