Moving NotFound to core to standardize results

--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\NotFoundTests.cs" />
     <Compile Include="Helpers\RequestTests.cs" />
     <Compile Include="Helpers\ResponseTests.cs" />
     <Compile Include="OwinTests.cs" />
