--- a/src/Gate.Helpers/Gate.Helpers.csproj
+++ b/src/Gate.Helpers/Gate.Helpers.csproj
@@ -43,6 +43,11 @@
     <Compile Include="ContentType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowExceptions.cs" />
+    <Compile Include="ShowExceptions.View.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ShowExceptions.View.tt</DependentUpon>
+    </Compile>
     <Compile Include="Wilson.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,7 +56,15 @@
       <Name>Gate</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ShowExceptions.View.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>ShowExceptions.View.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
