--- a/src/Tests/Gate.TestHelpers/Gate.TestHelpers.csproj
+++ b/src/Tests/Gate.TestHelpers/Gate.TestHelpers.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUtils.cs" />
+    <Compile Include="FakeApp.cs" />
     <Compile Include="FakeConsumer.cs" />
     <Compile Include="FakeProducer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
