--- a/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
+++ b/src/Tests/Gate.AspNet.Tests/Gate.AspNet.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{F32E456A-F26E-4C5D-93B8-311941A714E4}</ProjectGuid>
+    <ProjectGuid>{7459D8FB-7AF8-41FD-AA70-5D88FCC430A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate.AspNet</RootNamespace>
-    <AssemblyName>Gate.AspNet</AssemblyName>
+    <RootNamespace>Gate.AspNet.Tests</RootNamespace>
+    <AssemblyName>Gate.AspNet.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,8 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FakeItEasy">
+      <HintPath>..\..\..\dependencies\fakeiteasy\FakeItEasy.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\..\packages\NUnit.2.5.9.10348\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -42,15 +47,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppHandler.cs" />
-    <Compile Include="Handler.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="AppHandlerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.AspNet.csproj">
+      <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
+      <Name>Gate.AspNet</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Gate.TestHelpers\Gate.TestHelpers.csproj">
+      <Project>{E4256EDF-0B54-4715-8E66-8D4D4887E15F}</Project>
+      <Name>Gate.TestHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
