--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\NotFound.cs" />
+    <Compile Include="IApplication.cs" />
+    <Compile Include="IMiddleware.cs" />
+    <Compile Include="Startup\AppBuilderArgs.cs" />
     <Compile Include="Utils\AsyncResult.cs" />
     <Compile Include="Helpers\Response.cs" />
     <Compile Include="Owin.cs" />
