Adding optional interfaces to common middleware/apps
ShowExceptions and ContentType implementing IMiddleware
Wilson implementing IApplication
Samples' Startup methods illustrating two builder techniques

--- a/src/Samples/Sample.AspNet/Sample.AspNet.csproj
+++ b/src/Samples/Sample.AspNet/Sample.AspNet.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AspNetRootSourceProvider.cs" />
+    <Compile Include="DefaultPage.cs" />
     <Compile Include="MainModule.cs" />
     <Compile Include="Models\Index.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
