--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Helpers\OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spooling\SpoolTests.cs" />
+    <Compile Include="StartupTests\AppBuilderExtTests.cs" />
     <Compile Include="StartupTests\AppBuilderTests.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="StartupTests\Loader\DefaultConfigurationLoaderTests.cs" />
