ShowExceptions should format errors while sending body
This involves following the delegates down to stand in at
the response error call

--- a/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
+++ b/src/Tests/Gate.Helpers.Tests/Gate.Helpers.Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ContentTypeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShowExceptionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
