--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -40,11 +40,13 @@
     <Compile Include="NotFound.cs" />
     <Compile Include="IApplication.cs" />
     <Compile Include="IMiddleware.cs" />
+    <Compile Include="RewindableBody.cs" />
     <Compile Include="Startup\AppBuilderArgs.cs" />
     <Compile Include="Startup\AppBuilderExt.cs" />
     <Compile Include="Startup\ExtRunExtensions.cs" />
     <Compile Include="Startup\ExtUseExtensions.cs" />
     <Compile Include="Startup\ExtMapExtensions.cs" />
+    <Compile Include="Utils\StreamAwaiter.cs" />
     <Compile Include="Utils\AsyncResult.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="InputStream.cs" />
