--- a/src/Tests/Gate.Tests/Gate.Tests.csproj
+++ b/src/Tests/Gate.Tests/Gate.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="InputStreamTests.cs" />
     <Compile Include="OutputStreamTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RewindableBodyTests.cs" />
     <Compile Include="Spooling\SpoolTests.cs" />
     <Compile Include="StartupTests\AppBuilderExtTests.cs" />
     <Compile Include="StartupTests\AppBuilderTests.cs" />
