--- a/src/Gate/Gate.csproj
+++ b/src/Gate/Gate.csproj
@@ -42,11 +42,14 @@
     <Compile Include="IMiddleware.cs" />
     <Compile Include="Startup\AppBuilderArgs.cs" />
     <Compile Include="Startup\AppBuilderExt.cs" />
+    <Compile Include="Startup\Builder\AppBuilder.cs" />
+    <Compile Include="Startup\Builder\BaseBuilder.cs" />
+    <Compile Include="Startup\Builder\MapBuilder.cs" />
     <Compile Include="Startup\ExtRunExtensions.cs" />
     <Compile Include="Startup\ExtUseExtensions.cs" />
     <Compile Include="Startup\ExtMapExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Startup\AppBuilder.cs" />
+    <Compile Include="Startup\Builder\IAppBuilder.cs" />
     <Compile Include="Startup\Loader\DefaultConfigurationLoader.cs" />
     <Compile Include="Startup\Loader\IConfigurationLoader.cs" />
     <Compile Include="Startup\MapExtensions.cs" />
