basic kayak host with tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\src\Tests\Gate.Tests\packages.config" />
   <repository path="..\src\Tests\Gate.Helpers.Tests\packages.config" />
   <repository path="..\src\Tests\Gate.Nancy.Tests\packages.config" />
+  <repository path="..\src\Tests\Gate.Kayak.Tests\packages.config" />
 </repositories>
